--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
     "lodash": "^4.2.0",
     "lodash-es": "^4.2.0",
     "loose-envify": "^1.1.0",
-    "prop-types": "^15.0.0"
+    "prop-types": "^15.0.0",
+    "redux-thunk": "^2.2.0"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0",
